--- a/index.html
+++ b/index.html
@@ -19,20 +19,22 @@
 
     <header class="header">
         <div class="nav-items-wrapper">
-            <div class="nav-item"><a href="">Основные направления обучения</a></div>
-            <div class="nav-item"><a href="">Заявка на обучение</a></div>
-            <div class="nav-item"><a href="">Полигон по работам на высоте</a></div>
-            <div class="nav-item"><a href="">СОУТ</a></div>
-            <div class="nav-item"><a href="">Оценка проф рисков</a></div>
-            <div class="nav-item"><a href="">СУОТ</a></div>
-            <div class="nav-item"><a href="">Аттестация Ростехнадзора</a></div>
-            <div class="nav-item"><a href="">О нас</a></div>
-            <div class="nav-item"><a href="">Рабочие специальности</a></div>
-            <div class="nav-item"><a href="">ГОСТ Р ИСО</a></div>
+            <div class="nav-items-wrapper">
+                <div class="nav-item"><a href="./katalog.html">Основные направления обучения</a></div>
+                <div class="nav-item"><a href="">Заявка на обучение</a></div>
+                <div class="nav-item"><a href="./polygon.html">Полигон по работам на высоте</a></div>
+                <div class="nav-item"><a href="./sout.html">СОУТ</a></div>
+                <div class="nav-item"><a href="./profrisks.html">Оценка проф рисков</a></div>
+                <div class="nav-item"><a href="./sout.html">СУОТ</a></div>
+                <div class="nav-item"><a href="./certification.html">Аттестация Ростехнадзора</a></div>
+                <div class="nav-item"><a href="./contacts.html">О нас</a></div>
+                <div class="nav-item"><a href="./doku.html">Рабочие специальности</a></div>
+                <div class="nav-item"><a href="./gostriso.html">ГОСТ Р ИСО</a></div>
+            </div>
         </div>
     </header>
 
-    <div class="cover">
+    <div class="cover index">
         <div class="container">
             <div class="wrapper">
                 <h2 class="white">
