--- a/katalog.html
+++ b/katalog.html
@@ -33,17 +33,32 @@
     </header>
 
     <div class="cover katalog white bold">
-        <div class="container">
-            <div class="flex-center text-center">
-                <div class="font72">
-                    Основные направления
-                    <u>профессионального</u>
-                    обучения и аттестации!
-                </div>
-                <div>В нашем каталоге профессионального обучения и аттестации Вы найдете все самые необходимые направления для Вашей компании</div>
-                <div>От ОХРАНЫ ТРУДА до АТТЕСТАЦИИ РОСТЕНАДЗОРА!</div>
-                <a href=""><div class="katalog-btn uppercase">Каталог обучения</div></a>
+        <div class="container flex center column text-center">
+            <div class="font72">
+                Основные направления
+                <u>профессионального</u>
+                обучения и аттестации!
             </div>
+            <div class="font24">В нашем каталоге профессионального обучения и аттестации Вы найдете все самые необходимые направления для Вашей компании</div>
+            <div class="font24">От ОХРАНЫ ТРУДА до АТТЕСТАЦИИ РОСТЕНАДЗОРА!</div>
+            <a href=""><div class="katalog-btn uppercase">Каталог обучения</div></a>
+        </div>
+    </div>
+
+    <div class="section container flex justify-center gap15 wrap">
+        <div class="maxw-360 font24">
+            <p><span class="bold">В центре обучения и аттестации «ГЕНЕЗИС» Вы может пройти обучение и аттестацию по всем популярным и легитимным направлениям!</span><br>
+            Получить удостоверение по рабочей специальности или пройти повышение квалификации дистанционно!</p>
+            <p class="bold">С нами Работают организации из всех отраслей производства и сервиса со всей России!</p>
+            <p>Мы работаем по всей Стране, удостоверения доставляются лично Вам в короткие сроки!</p>
+            <p class="bold">С нами у Вас есть возможность получить профессиональное образование и аттестацию высшего уровня!</p>
+        </div>
+
+        <div class="maxw-360 font20">
+            <hr>
+            <p><span class="bold">ВАЖНО!</span> <br>
+            1 января 2021 года вступили в законную силу новые требования в сфере <span class="bold">охраны труда</span>, согласно которым работодатель обязан организовать для сотрудников <span class="bold"><span class="uppercase">прохождение внеочередной проверки знаний</span>, независимо от срока предыдущей проверки</span> (Постановление Минтруда России и Минобразования России от 13 января 2003 г. № 1/29 «Об утверждении Порядка обучения по охране труда и проверки знаний требований охраны труда работников организаций»).</p>
+            <p class="bold">Допуск сотрудников к исполнению обязанностей без обучения по охране труда влечет наложение административной ответственности на работодателя в виде штрафов в соответствии со ст. 5.27.1 КоАП РФ.</p>
         </div>
     </div>
 
@@ -54,6 +69,17 @@
         <a href="">
             <div class="button-huge uppercase font32 bold">Отправить запрос</div>
         </a>
+    </div>
+
+    <div class="section container mx-auto">
+        <h1 class="uppercase colored bold font42 text-center">Мы будем рады сотрудничать с Вами!</h1>
+        <div class="maxw-540 mx-auto font24">
+            <p class="bold">Центр подготовки и аттестации ГЕНЕЗИС проводит обучение по различным направлениям профессиональной деятельности.</p>
+
+            <p class="light">У нас Вы получите только легитимные и подходящие для всех заказчиков удостоверения и дипломы государственного образца; Программы, составленные с учетом профессиональных стандартов; дистанционная форма обучения без отрыва от работы!</p>
+
+            <p><span class="colored bold">Выбирайте интересующие Вас направления:</span> обучение аттестации, рабочие направления, аттестацию Ростехнадзора и другое.</p>
+        </div>
     </div>
 
     <div class="cards container">
