katalog cards added

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <div class="bold uppercase">Пожарно-технический минимум</div>
                     <div class="description">Обучение специалистов в объеме пожарно-технического минимума по программам от 16 часов</div>
                 </div>
-                <a href=""><div class="card__button bold">Подробнее</div></a>
+                <a href=""><div class="btn-black bold">Подробнее</div></a>
             </div>
 
             <div class="carousel__card">
@@ -309,7 +309,7 @@
                     <div class="bold uppercase">Оказание первой доврачебной помощи</div>
                     <div class="description">Изучение принципов оказания первой доврачебной помощи при несчастных случаях на производстве с отработкой практических навыков на тренажёре</div>
                 </div>
-                <a href=""><div class="card__button bold">Подробнее</div></a>
+                <a href=""><div class="btn-black bold">Подробнее</div></a>
             </div>
 
             <div class="carousel__card">
@@ -318,7 +318,7 @@
                     <div class="bold uppercase">Работы на высоте</div>
                     <div class="description">Обучение безопасным методам и приёмам выполнения работ на высоте с применением средств подмащивания и (или) средств канатного доступа: 1, 2 и 3 группа</div>
                 </div>
-                <a href=""><div class="card__button bold">Подробнее</div></a>
+                <a href=""><div class="btn-black bold">Подробнее</div></a>
             </div>
 
             <div class="carousel__card">
@@ -327,7 +327,7 @@
                     <div class="bold uppercase">Промышленная безопасность</div>
                     <div class="description">Обязательное повышение квалификации по промышленной безопасности по всем областям. Сопровождение аттестации в Ростехнадзоре</div>
                 </div>
-                <a href=""><div class="card__button bold">Подробнее</div></a>
+                <a href=""><div class="btn-black bold">Подробнее</div></a>
             </div>
         </div>
     </div>
