--- a/katalog.html
+++ b/katalog.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 
-    <div class="section container flex justify-center gap15 wrap">
+    <div class="section container flex justify-center gap-15 wrap">
         <div class="maxw-360 font24">
             <p><span class="bold">В центре обучения и аттестации «ГЕНЕЗИС» Вы может пройти обучение и аттестацию по всем популярным и легитимным направлениям!</span><br>
             Получить удостоверение по рабочей специальности или пройти повышение квалификации дистанционно!</p>
@@ -191,6 +191,106 @@
                     </div>
                 </div>
             </a>
+        </div>
+    </div>
+
+    <div class="section bg-white flex wrap">
+        <div class="katalog-cards-wrapper container">
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-1.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда</div>
+                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                </div>
+                <div class="btn-wrapper">
+                    <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-2.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Оказание первой доврачебной помощи</div>
+                    <div class="description font14">В соответствии с требованиями статей 212, 225 Трудового кодекса Российской Федерации, организация обучения работников навыкам оказания первой помощи пострадавшим на производстве является обязанностью работодателя</div>
+                    <div class="price">1200 р. <s>1700 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-3.png" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Пожарно-технический минимум</div>
+                    <div class="description font14">В соответствии со статьей 37 Федерального закона от 21.12.1994 № 69-ФЗ «О пожарной безопасности», руководители организаций обязаны обучать своих работников мерам пожарной безопасности.</div>
+                    <div class="price">900 р. <s>1500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-4.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда при работе на высоте</div>
+                    <div class="description font14">При выполнении работ на высоте необходимо соблюдать меры безопасности и требования охраны труда при работе на высоте, которые установлены в приказе Министерства труда и социальной защиты Российской Федерации от 28 марта 2014 г. № 155-н «Об утверждении Правил по охране труда при работе на высоте».</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black">Добавить в корзину</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-5.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда</div>
+                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-6.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда</div>
+                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-7.jpg" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда</div>
+                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="katalog-card">
+                <img src="./static/img/katalog/card-8.png" alt="">
+                <div class="text-wrapper">
+                    <div class="uppercase bold">Охрана труда</div>
+                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
+                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="btn-wrapper">
+                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
