--- a/katalog.html
+++ b/katalog.html
@@ -237,7 +237,7 @@
                 <div class="text-wrapper">
                     <div class="uppercase bold">Охрана труда при работе на высоте</div>
                     <div class="description font14">При выполнении работ на высоте необходимо соблюдать меры безопасности и требования охраны труда при работе на высоте, которые установлены в приказе Министерства труда и социальной защиты Российской Федерации от 28 марта 2014 г. № 155-н «Об утверждении Правил по охране труда при работе на высоте».</div>
-                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="price">2500 р. <s>3500 р.</s></div>
                     <div class="btn-wrapper">
                         <a href=""><div class="btn-black">Добавить в корзину</div></a>
                     </div>
@@ -247,11 +247,11 @@
             <div class="katalog-card">
                 <img src="./static/img/katalog/card-5.jpg" alt="">
                 <div class="text-wrapper">
-                    <div class="uppercase bold">Охрана труда</div>
-                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
-                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="uppercase bold">Повышение квалификации</div>
+                    <div class="description font14">Повышение квалификации – это обновление теоретических и практических знаний, совершенствование навыков специалистов в связи с постоянно повышающимися требованиями к их квалификации. Курсы повышения квалификации могут проходить только те, кто уже имеет диплом о среднем или высшем профессиональном образовании.</div>
+                    <div class="price">от 3500 р. <s>5000 р.</s></div>
                     <div class="btn-wrapper">
-                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                        <a href=""><div class="btn-black">Добавить в корзину</div></a>
                     </div>
                 </div>
             </div>
@@ -259,11 +259,11 @@
             <div class="katalog-card">
                 <img src="./static/img/katalog/card-6.jpg" alt="">
                 <div class="text-wrapper">
-                    <div class="uppercase bold">Охрана труда</div>
-                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
-                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="uppercase bold">Сопровождение аттестации по промышленной безопасности в Ростехнадзоре под ключ</div>
+                    <div class="description font14">Сопровождение аттестации по промышленной безопасности в Ростехнадзоре ПОД КЛЮЧ. Помогаем и содействуем в аттестации по промышленной безопасности и электробезопасности, пишите в чат или звоните.</div>
+                    <div class="price font16">По запросу</div>
                     <div class="btn-wrapper">
-                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                        <a href=""><div class="btn-black">Добавить в корзину</div></a>
                     </div>
                 </div>
             </div>
@@ -271,11 +271,14 @@
             <div class="katalog-card">
                 <img src="./static/img/katalog/card-7.jpg" alt="">
                 <div class="text-wrapper">
-                    <div class="uppercase bold">Охрана труда</div>
-                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
-                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="uppercase bold">Рабочие профессии</div>
+                    <div class="description font14">
+                        В центре обучения и аттестации ГЕНЕЗИС вы можете пройти комплексное обучение по всем видам рабочих профессий. <br>
+                        Профессиональное обучение позволит вам получить доступ к определенным видам работ, а также увеличит вашу профессиональную компетенцию и заработную плату.
+                    </div>
+                    <div class="price">от 4000 р. <s>от 5000 р.</s></div>
                     <div class="btn-wrapper">
-                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                        <a href=""><div class="btn-black">Добавить в корзину</div></a>
                     </div>
                 </div>
             </div>
@@ -283,11 +286,11 @@
             <div class="katalog-card">
                 <img src="./static/img/katalog/card-8.png" alt="">
                 <div class="text-wrapper">
-                    <div class="uppercase bold">Охрана труда</div>
-                    <div class="description font14">Приглашаем пройти обучение в области охраны труда руководителей и специалистов предприятий, учреждений и организаций по утвержденной программе</div>
-                    <div class="price">1900 р. <s>2500 р.</s></div>
+                    <div class="uppercase bold">Специальная оценка условий труда (СОУТ)</div>
+                    <div class="description font14"><span class="bold">Специальная оценка условий труда (СОУТ)</span> проводится с целью идентификации вредных и (или) опасных факторов, и оценки уровня их воздействия на работника, выполняющего трудовые обязанности на определенном рабочем месте. На основании проверки, устанавливаются классы (подклассы) условий труда на рабочем месте. </div>
+                    <div class="price">от 1600 р. <s>от 2000 р.</s></div>
                     <div class="btn-wrapper">
-                        <a href=""><div class="btn-black uppercase">Отправить заявку</div></a>
+                        <a href=""><div class="btn-black">Добавить в корзину</div></a>
                     </div>
                 </div>
             </div>
